# url-shortener

./: Cargo.toml  README.md
src/: main.rs
src/db/: mongodb.rs
src/handlers/: auth_handlers.rs  health_handlers.rs  mod.rs  qr_handlers.rs  url_handlers.rs  user_handlers.rs
src/middlewares/: authmw.rs  mod.rs  res_owner.rs
src/models/: mod.rs  qr_code.rs  role.rs  url.rs  url_visitor.rs  user.rs
src/routes/: mod.rs  routes.rs
src/structs/: mod.rs  qr_request.rs  url_request.rs  user.rs
src/utils/: hash_ip.rs  jwt.rs  mod.rs
